--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/SlidableListItem/SlidableListItemPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/SlidableListItem/SlidableListItemPage.xaml
@@ -16,8 +16,9 @@
                                           TrueValue="Visible" />
         <DataTemplate x:Key="EmailsItemTemplate"
                       x:DataType="data:Item">
-            <controls:SlidableListItem MinWidth="300"
+            <controls:SlidableListItem MinWidth="300" 
                                        MaxWidth="800"
+                                       AutomationProperties.Name="{x:Bind Title}"
                                        HorizontalAlignment="Stretch"
                                        ActivationWidth="{Binding DataContext.ActivationWidth.Value, ElementName=Root, Mode=OneWay}"
                                        IsLeftCommandEnabled="{Binding DataContext.IsLeftCommandEnabled.Value, ElementName=Root, Mode=OneWay}"
