--- a/Microsoft.Toolkit.Uwp.UI.Controls/HamburgerMenu/HamburgerMenu.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/HamburgerMenu/HamburgerMenu.xaml
@@ -1,14 +1,10 @@
-﻿<ResourceDictionary 
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Microsoft.Toolkit.Uwp.UI.Controls"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
-
-
-
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:local="using:Microsoft.Toolkit.Uwp.UI.Controls">
+    
     <Style TargetType="local:HamburgerMenu">
+        <!-- Defaulting the HamburgerMenu Accent Color to be the SystemAccentColor -->
+        <Setter Property="AccentColor" Value="{ThemeResource SystemAccentColor}" />
         <Setter Property="HamburgerMenuTemplate">
             <Setter.Value>
                 <DataTemplate>
@@ -87,17 +83,15 @@
                                               AutomationProperties.Name="Content"
                                               Content="{TemplateBinding Content}" />
                         </SplitView>
-                        <Button 
-                            Name="HamburgerButton"
-                            Width="{TemplateBinding HamburgerWidth}"
-                            Height="{TemplateBinding HamburgerHeight}"
-                            Padding="0"
-                            VerticalAlignment="Top"
-                            AutomationProperties.Name="Main button"
-                            Background="{TemplateBinding AccentColor}"
-                            BorderThickness="0"
-                            TabIndex="0"
-                            >
+                        <Button Name="HamburgerButton"
+                                Width="{TemplateBinding HamburgerWidth}"
+                                Height="{TemplateBinding HamburgerHeight}"
+                                Padding="0"
+                                VerticalAlignment="Top"
+                                AutomationProperties.Name="Main button"
+                                Background="{TemplateBinding AccentColor}"
+                                BorderThickness="0"
+                                TabIndex="0">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Grid x:Name="RootGrid" Background="{TemplateBinding Background}">
@@ -111,13 +105,13 @@
                                                 <VisualState x:Name="PointerOver">
                                                     <Storyboard>
                                                         <PointerUpThemeAnimation Storyboard.TargetName="RootGrid"/>
-                                                        <DoubleAnimation Duration="0" To="0.2" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="rectangle" d:IsOptimized="True"/>
+                                                        <DoubleAnimation Duration="0" To="0.2" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="rectangle" />
                                                     </Storyboard>
                                                 </VisualState>
                                                 <VisualState x:Name="Pressed">
                                                     <Storyboard>
                                                         <PointerDownThemeAnimation Storyboard.TargetName="RootGrid"/>
-                                                        <DoubleAnimation Duration="0" To="0.5" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="rectangle" d:IsOptimized="True"/>
+                                                        <DoubleAnimation Duration="0" To="0.5" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="rectangle" />
                                                     </Storyboard>
                                                 </VisualState>
                                                 <VisualState x:Name="Disabled">
