--- a/Microsoft.Toolkit.Uwp.UI.Controls/MosaicControl/MosaicControl.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/MosaicControl/MosaicControl.xaml
@@ -2,6 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls">
     <Style TargetType="controls:MosaicControl">
+        <Setter Property="IsTabStop" Value="False" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="controls:MosaicControl">
