remove "this" and add _  for privates variables

--- a/Microsoft.Toolkit.Uwp.UI.Controls/MosaicControl/MosaicControl.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/MosaicControl/MosaicControl.xaml
@@ -8,7 +8,9 @@
                 <ControlTemplate TargetType="controls:MosaicControl">
                     <Grid>
                         <Border                        
-                        x:Name="RootElement"                        
+                        x:Name="RootElement"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}"
                         Background="{TemplateBinding Background}"
                         >
                             <Canvas x:Name="ContainerElement"/>
