Add Latitude and Longitude to a Tweet.  Implementing another method so as to NOT break the existing API. Also updated the sample app for testing purposes.

--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Twitter Service/TwitterPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Twitter Service/TwitterPage.xaml
@@ -187,6 +187,26 @@
                             <TextBox x:Name="TweetText"
                                      Margin="0,0,0,12"
                                      Header="Tweet" />
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition />
+                                    <ColumnDefinition />
+                                    <ColumnDefinition />
+                                </Grid.ColumnDefinitions>
+                                <TextBox x:Name="Latitude"
+                                         Margin="0,0,6,12"
+                                         Header="Latitude" />
+                                <TextBox x:Name="Longitude"
+                                         Grid.Column="1"
+                                         Margin="6,0,6,12"
+                                         Header="Longitude" />
+                                <CheckBox x:Name="DisplayCoordinates"
+                                          Grid.Column="2"
+                                          Margin="6,0,6,12"
+                                          VerticalAlignment="Bottom"
+                                          Content="Display Coords" />
+                            </Grid>
+
                             <StackPanel Orientation="Horizontal">
                                 <Button x:Name="ShareButton"
                                         Margin="0,0,12,0"
@@ -247,7 +267,8 @@
                               SelectionMode="None">
                         <ListView.ItemContainerStyle>
                             <Style TargetType="ListViewItem">
-                                <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                                <Setter Property="HorizontalContentAlignment"
+                                        Value="Stretch" />
                                 <Setter Property="Template">
                                     <Setter.Value>
                                         <ControlTemplate TargetType="ListViewItem">
