--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Twitter Service/TwitterPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Twitter Service/TwitterPage.xaml
@@ -189,19 +189,25 @@
                                      Header="Tweet" />
                             <Grid>
                                 <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto" />
                                     <ColumnDefinition />
                                     <ColumnDefinition />
-                                    <ColumnDefinition />
+                                    <ColumnDefinition Width="Auto" />
                                 </Grid.ColumnDefinitions>
+                                <AppBarButton x:Name="GetLocation"
+                                              Label="Locate"
+                                              Icon="World"
+                                              Click="GetLocation_OnClick" />
                                 <TextBox x:Name="Latitude"
+                                         Grid.Column="1"
                                          Margin="0,0,6,12"
                                          Header="Latitude" />
                                 <TextBox x:Name="Longitude"
-                                         Grid.Column="1"
+                                         Grid.Column="2"
                                          Margin="6,0,6,12"
                                          Header="Longitude" />
                                 <CheckBox x:Name="DisplayCoordinates"
-                                          Grid.Column="2"
+                                          Grid.Column="3"
                                           Margin="6,0,6,12"
                                           VerticalAlignment="Bottom"
                                           Content="Display Coords" />
