refactor(Expander): improve Expander control

--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Expander/ExpanderPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Expander/ExpanderPage.xaml
@@ -9,13 +9,9 @@
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <StackPanel Margin="20">
-            <controls:Expander x:Name="Expander1" VerticalAlignment="Top" Margin="0,0,0,10" IsExpanded="False">
-                <controls:Expander.HeaderButtonContent>
-                    <TextBlock Text="This is the header - expander 1" 
-                               VerticalAlignment="Center" 
-                               Style="{StaticResource SubtitleTextBlockStyle}" />
-                </controls:Expander.HeaderButtonContent>
-
+            <controls:Expander x:Name="Expander1" VerticalAlignment="Top" Margin="0,0,0,10" 
+                               Header="This is the header - expander 1"
+                               IsExpanded="{Binding Path=IsExpanded1.Value, Mode=TwoWay}">
                 <Grid Height="250" Background="{StaticResource Brush-Grey-01}">
                     <TextBlock HorizontalAlignment="Center" 
                                TextWrapping="Wrap" 
@@ -25,13 +21,9 @@
                 </Grid>
             </controls:Expander>
 
-            <controls:Expander x:Name="Expander2" VerticalAlignment="Top" Margin="0" IsExpanded="True">
-                <controls:Expander.HeaderButtonContent>
-                    <TextBlock Text="This is the header - expander 2" 
-                               VerticalAlignment="Center" 
-                               Style="{StaticResource SubtitleTextBlockStyle}" />
-                </controls:Expander.HeaderButtonContent>
-
+            <controls:Expander x:Name="Expander2" VerticalAlignment="Top" Margin="0" 
+                               Header="This is the header - expander 2"
+                               IsExpanded="{Binding Path=IsExpanded2.Value, Mode=TwoWay}">
                 <Grid Height="250" Background="{StaticResource Brush-Grey-02}">
                     <TextBlock HorizontalAlignment="Center" 
                                TextWrapping="Wrap" 
