--- a/Microsoft.Toolkit.Uwp.UI.Controls/Expander/Expander.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Expander/Expander.xaml
@@ -232,91 +232,42 @@
         </Setter>
     </Style>
 
-    <Style x:Key="HeaderButtonStyle" TargetType="Button">
-        <Setter Property="Background" Value="{ThemeResource AppBarBackgroundThemeBrush}" />
-        <Setter Property="Foreground" Value="{ThemeResource SystemControlForegroundBaseHighBrush}" />
-        <Setter Property="BorderBrush" Value="{ThemeResource SystemControlForegroundTransparentBrush}" />
-        <Setter Property="BorderThickness" Value="{ThemeResource ButtonBorderThemeThickness}" />
-        <Setter Property="Padding" Value="8,4,8,4" />
-        <Setter Property="HorizontalAlignment" Value="Left" />
-        <Setter Property="VerticalAlignment" Value="Center" />
-        <Setter Property="FontFamily" Value="{ThemeResource ContentControlThemeFontFamily}" />
-        <Setter Property="FontWeight" Value="Normal" />
-        <Setter Property="FontSize" Value="{ThemeResource ControlContentThemeFontSize}" />
-        <Setter Property="UseSystemFocusVisuals" Value="True" />
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="Button">
-                    <Grid x:Name="RootGrid" Background="{TemplateBinding Background}">
-                        <VisualStateManager.VisualStateGroups>
-                            <VisualStateGroup x:Name="CommonStates">
-                                <VisualState x:Name="Normal">
-                                    <Storyboard>
-                                        <PointerUpThemeAnimation Storyboard.TargetName="RootGrid" />
-                                    </Storyboard>
-                                </VisualState>
-                                <VisualState x:Name="PointerOver">
-                                    <Storyboard>
-                                        <PointerUpThemeAnimation Storyboard.TargetName="RootGrid" />
-                                    </Storyboard>
-                                </VisualState>
-                                <VisualState x:Name="Pressed">
-                                    <Storyboard>
-                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background"
-                                                                       Storyboard.TargetName="RootGrid">
-                                            <DiscreteObjectKeyFrame KeyTime="0"
-                                                                    Value="{ThemeResource SystemControlBackgroundBaseMediumLowBrush}" />
-                                        </ObjectAnimationUsingKeyFrames>
-                                      
-                                    </Storyboard>
-                                </VisualState>
-                                <VisualState x:Name="Disabled">
-                                    <Storyboard>
-                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background"
-                                                                       Storyboard.TargetName="RootGrid">
-                                            <DiscreteObjectKeyFrame KeyTime="0"
-                                                                    Value="{ThemeResource SystemControlBackgroundBaseLowBrush}" />
-                                        </ObjectAnimationUsingKeyFrames>
-                                    </Storyboard>
-                                </VisualState>
-                            </VisualStateGroup>
-                        </VisualStateManager.VisualStateGroups>
-                        <ContentPresenter />
-                    </Grid>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
+    <DataTemplate x:Key="ExpanderHeaderTemplate">
+        <Grid Background="{ThemeResource AppBarBackgroundThemeBrush}"
+              HorizontalAlignment="Stretch"
+              Padding="8,4,8,4" Margin="0">
+            <TextBlock Text="{Binding}" 
+                       Margin="5,0,0,0"
+                       VerticalAlignment="Center" 
+                       Style="{StaticResource SubtitleTextBlockStyle}"
+                       Foreground="{ThemeResource SystemControlForegroundBaseHighBrush}"
+                       FontFamily="{ThemeResource ContentControlThemeFontFamily}" />
+        </Grid>
+    </DataTemplate>
 
     <Style TargetType="controls:Expander">
-        <Setter Property="ExpanderToggleButtonStyle" Value="{StaticResource HeaderToggleButtonStyle}" />
-        <Setter Property="HeaderButtonStyle" Value="{StaticResource HeaderButtonStyle}" />
-        <Setter Property="HeaderButtonContent" Value="Header" />    
+        <Setter Property="HeaderTemplate" Value="{StaticResource ExpanderHeaderTemplate}" />
+        <Setter Property="Header" Value="Header" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="controls:Expander">
-                    <Grid d:DesignWidth="600" d:DesignHeight="400">
+                    <Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto" />
                             <RowDefinition />
                         </Grid.RowDefinitions>
                         <VisualStateManager.VisualStateGroups>
-                            <VisualStateGroup x:Name="CommonStates">
-                                <VisualState x:Name="Normal" />
-                                <VisualState x:Name="ReadOnly" />
-                                <VisualState x:Name="MouseOver" />
-                                <VisualState x:Name="Disabled" />
-                                <VisualState x:Name="Enabled" />
-                            </VisualStateGroup>
-                            <VisualStateGroup x:Name="HeaderStates">
-                                <VisualState x:Name="HeaderExpanderMouseOver" />
-                                <VisualState x:Name="HeaderSelectorMouseOver" />
-                                <VisualState x:Name="HeaderExpanderPressed" />
-                                <VisualState x:Name="HeaderSelectorPressed" />
-                            </VisualStateGroup>
-                            <VisualStateGroup x:Name="ContentStates">
-                                <VisualState x:Name="ContentExpanded" />
-                                <VisualState x:Name="ContentCollapsed" />
+                            <VisualStateGroup x:Name="ExpandedStates">
+                                <VisualState x:Name="Expanded">
+                                    <VisualState.Setters>
+                                        <Setter Target="PART_MainContentRow.Height" Value="Auto" />
+                                    </VisualState.Setters>
+                                </VisualState>
+                                <VisualState x:Name="Collapsed">
+                                    <VisualState.Setters>
+                                        <Setter Target="PART_MainContentRow.Height" Value="0" />
+                                    </VisualState.Setters>
+                                </VisualState>
                             </VisualStateGroup>
                         </VisualStateManager.VisualStateGroups>
                         <Grid Grid.RowSpan="2" VerticalAlignment="Top">
@@ -329,16 +280,17 @@
                                 <ColumnDefinition />
                             </Grid.ColumnDefinitions>
                             <ToggleButton x:Name="PART_ExpanderToggleButton" Height="40"
-                                          Style="{TemplateBinding ExpanderToggleButtonStyle}" VerticalAlignment="Top"
+                                          Style="{StaticResource HeaderToggleButtonStyle}" VerticalAlignment="Top"
+                                          IsChecked="{Binding IsExpanded, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"
                                           Width="40">
                                 <SymbolIcon Symbol="Forward" />
                             </ToggleButton>
-                            <Button x:Name="PART_HeaderButton" VerticalAlignment="Stretch"
-                                    d:LayoutOverrides="Height" Style="{TemplateBinding HeaderButtonStyle}"
-                                    HorizontalAlignment="Stretch" Grid.Column="1">
-                                <ContentPresenter Content="{TemplateBinding HeaderButtonContent}" Margin="5,0,0,0" />
-                            </Button>
-                            <ContentPresenter Content="{TemplateBinding Content}" Grid.ColumnSpan="3" Grid.Row="1" />
+                            <Grid x:Name="PART_Header" VerticalAlignment="Stretch"
+                                  d:LayoutOverrides="Height"
+                                  HorizontalAlignment="Stretch" Grid.Column="1">
+                                <ContentPresenter ContentTemplate="{TemplateBinding HeaderTemplate}" Content="{TemplateBinding Header}" />
+                            </Grid>
+                            <ContentControl Content="{TemplateBinding Content}" Grid.ColumnSpan="3" Grid.Row="1" HorizontalContentAlignment="Stretch" />
                         </Grid>
                     </Grid>
                 </ControlTemplate>
