Added TwitterGeoData to the Tweet. Display the latitude and longitude (if present) with the Tweet in the sample app.

--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Twitter Service/TwitterPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Twitter Service/TwitterPage.xaml
@@ -3,6 +3,8 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:core="using:Microsoft.Xaml.Interactions.Core"
+      xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
       xmlns:twitter="using:Microsoft.Toolkit.Uwp.Services.Twitter"
       mc:Ignorable="d">
     <Page.Resources>
@@ -58,10 +60,16 @@
                                Text="{x:Bind Text}"
                                TextTrimming="CharacterEllipsis"
                                TextWrapping="WrapWholeWords" />
-                    <TextBlock Grid.Row="2"
-                               HorizontalAlignment="Right"
-                               FontWeight="ExtraLight"
-                               Text="{x:Bind CreationDate}" />
+                    <StackPanel Grid.Row="2"
+                                HorizontalAlignment="Right"
+                                Orientation="Horizontal">
+                        <TextBlock FontWeight="ExtraLight"
+                                   Text="{x:Bind CreationDate}" />
+                        <TextBlock FontWeight="ExtraLight"
+                                   Margin="4,0,0,0"
+                                   Text="{x:Bind GeoData.DisplayCoordinates}">
+                        </TextBlock>
+                    </StackPanel>
                 </Grid>
             </Border>
         </DataTemplate>
