Added HamburgerBackground property so a specific color can be specified for the Hamburger button itself separate from the PaneBackground

--- a/Microsoft.Toolkit.Uwp.UI.Controls/HamburgerMenu/HamburgerMenu.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/HamburgerMenu/HamburgerMenu.xaml
@@ -87,7 +87,7 @@
                                 Padding="0"
                                 VerticalAlignment="Top"
                                 AutomationProperties.Name="Main button"
-                                Background="Transparent"
+                                Background="{TemplateBinding HamburgerBackground}"
                                 BorderThickness="0"
                                 TabIndex="0">
                             <ContentControl Margin="{TemplateBinding HamburgerMargin}"
