feat(hamburgerMenu): add ItemTemplateSelector and OptionsItemTemplateSelector properties

--- a/Microsoft.Toolkit.Uwp.UI.Controls/HamburgerMenu/HamburgerMenu.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/HamburgerMenu/HamburgerMenu.xaml
@@ -36,6 +36,7 @@
                                               Width="{TemplateBinding OpenPaneLength}"
                                               AutomationProperties.Name="Menu items"
                                               IsItemClickEnabled="True"
+                                              ItemTemplateSelector="{TemplateBinding ItemTemplateSelector}"
                                               ItemTemplate="{TemplateBinding ItemTemplate}"
                                               ItemsSource="{TemplateBinding ItemsSource}"
                                               SelectedIndex="{Binding SelectedIndex, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
@@ -62,6 +63,7 @@
                                                   VerticalAlignment="Bottom"
                                                   AutomationProperties.Name="Option items"
                                                   IsItemClickEnabled="True"
+                                                  ItemTemplateSelector="{TemplateBinding OptionsItemTemplateSelector}"
                                                   ItemTemplate="{TemplateBinding OptionsItemTemplate}"
                                                   ItemsSource="{TemplateBinding OptionsItemsSource}"
                                                   SelectedIndex="{Binding SelectedOptionsIndex, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
